# rnaseq-control-plane

./: .env.example  .gitignore  AGENTS.md  README.md  environment.yml  package-lock.json  package.json  pyproject.toml
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 202607090001_initial_schema.py
apps/api/app/: main.py
apps/api/app/api/: deps.py
apps/api/app/api/routes/: auth.py  pipelines.py  runs.py
apps/api/app/core/: config.py  logging.py  security.py
apps/api/app/db/: init_db.py  session.py
apps/api/app/models/: __init__.py  entities.py
apps/api/app/services/: parser.py  pipeline_registry.py  runner.py
apps/api/app/tests/: conftest.py
apps/api/app/tests/fixtures/parser_run/: nextflow_trace.txt
apps/api/app/tests/integration/: test_create_run.py
apps/api/app/tests/unit/: test_config.py  test_contracts.py  test_parser.py
apps/api/scripts/: export_openapi.py  seed_initial_data.py
apps/cli/: pyproject.toml
apps/cli/rnaseq_cli/: client.py  main.py
apps/web/: Dockerfile  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/login/: page.tsx
apps/web/app/pipelines/: page.tsx
apps/web/app/runs/[id]/: page.tsx
apps/web/app/runs/new/: page.tsx
apps/web/lib/: api.ts
docs/: ARCHITECTURE.md  PROJECT_MEMORY.md  ROADMAP.md
infra/docker/: docker-compose.yml
