[project]
name = "rnaseq-api"
version = "0.1.0"
description = "FastAPI control plane for RNA-Seq Nextflow pipelines"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13",
  "fastapi>=0.111",
  "pydantic[email]>=2.7",
  "psycopg[binary]>=3.2",
  "python-multipart>=0.0.9",
  "PyYAML>=6.0",
  "sqlalchemy>=2.0",
  "uvicorn[standard]>=0.30"
]

[project.optional-dependencies]
dev = ["httpx>=0.27", "mypy>=1.10", "pytest>=8.2", "ruff>=0.5"]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

