[project]
name = "rnaseq-cli"
version = "0.1.0"
description = "CLI for rnaseq-control-plane"
requires-python = ">=3.11"
dependencies = ["httpx>=0.27", "PyYAML>=6.0", "rich>=13.7", "typer>=0.12"]

[project.scripts]
rnaseq = "rnaseq_cli.main:app"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["rnaseq_cli*"]

